@@ -12,6 +12,13 @@ import org.volunteer.server.util.Chromosome;
 
 import lombok.extern.slf4j.Slf4j;
 
+/**
+ * Executes genetic algorithm optimization for volunteer-service assignments.
+ * <p>
+ * Implements a steady-state GA with tournament selection and single-point crossover.
+ * Configured through application properties. Not thread-safe - designed for single-threaded
+ * execution within the service layer.
+ */
 @Slf4j
 @Service
 public final class GeneticAlgorithmService {
@@ -19,25 +26,45 @@ public final class GeneticAlgorithmService {
     private final int POP_SIZE;
     private final int MAX_GENERATIONS;
     private final double MUTATION_RATE;
-
     private final Random RNG;
 
+    /**
+     * Constructs the service with genetic algorithm parameters.
+     *
+     * @param popSize number of solutions maintained in population
+     * @param maxGenerations maximum evolution iterations
+     * @param mutationRate gene mutation probability [0.0-1.0]
+     */
     public GeneticAlgorithmService(
-        @Value("${application.settings.population-size}") int popSize, 
-        @Value("${application.settings.max-generations}") int maxGenerations, 
-        @Value("${application.settings.mutation-rate}") double mutationRate)
+            @Value("${application.settings.population-size}") int popSize,
+            @Value("${application.settings.max-generations}") int maxGenerations,
+            @Value("${application.settings.mutation-rate}") double mutationRate)
     {
-        this.POP_SIZE = popSize; 
-        this.MAX_GENERATIONS = maxGenerations; 
+        this.POP_SIZE = popSize;
+        this.MAX_GENERATIONS = maxGenerations;
         this.MUTATION_RATE = mutationRate;
         this.RNG = new Random();
     }
 
+    /**
+     * Evolves volunteer-service assignments through genetic optimization.
+     * <p>
+     * Algorithm flow:
+     * 1. Initializes population of random solutions
+     * 2. Iterates through generations using:
+     *    - Tournament parent selection
+     *    - Single-point crossover
+     *    - Probabilistic mutation
+     *    - Worst-member replacement strategy
+     *
+     * @param inst problem constraints and preferences
+     * @return optimized service assignment indices
+     */
     public int[] run(ProblemInstance inst) {
         log.info("Genetic algorithm request received");
 
         List<Chromosome> pop = initPopulation(inst);
-        Chromosome best = pop.get(0);
+        Chromosome best = pop.getFirst();
 
         for (int g = 0; g < MAX_GENERATIONS; g++) {
             Chromosome p1 = tournament(pop);
@@ -49,7 +76,7 @@ public final class GeneticAlgorithmService {
             }
             child.computeFitness(inst);
 
-            // Replace worst
+            // Replace worst population member
             pop.sort(Collections.reverseOrder());
             pop.set(0, child);
 
@@ -57,11 +84,15 @@ public final class GeneticAlgorithmService {
         }
 
         log.info("Finished genetic algorithm");
-
         return best.genes;
     }
 
     /* ---------- helpers ---------- */
+
+    /**
+     * Generates initial population of random chromosomes sorted by fitness.
+     * @return sorted list of chromosomes (best fitness first)
+     */
     private List<Chromosome> initPopulation(ProblemInstance inst) {
         List<Chromosome> pop = new ArrayList<>(POP_SIZE);
         int v = inst.volunteers().size();
@@ -76,9 +107,13 @@ public final class GeneticAlgorithmService {
         return pop;
     }
 
+    /**
+     * Tournament selection between two random population members.
+     * @return chromosome with better (lower) fitness score
+     */
     private Chromosome tournament(List<Chromosome> pop) {
         Chromosome a = pop.get(RNG.nextInt(pop.size()));
         Chromosome b = pop.get(RNG.nextInt(pop.size()));
         return a.fitness < b.fitness ? a : b;
     }
-} 
+}
